syntax = "proto3";

package proto;


service Greeter {
    rpc HelloTest (SayRequest) returns (SayResponse);
}

message  SayRequest{
    string name = 1;
}

message SayResponse{
    string greeting = 2;
}